# RoboticsProjects-Crazyflie

./: CMakeLists.txt  Dockerfile  README.md  first_run.sh  package.xml
config/: crazyflies_mrs.yaml  single_agent_crazyflie_real.yaml  single_agent_crazyflie_sim.yaml
launch/: cf_velmux_launch.py  map_server_launch.py  single_agent_real_launch.py  single_agent_sim_launch.py  sitl_multiagent_text.sh
launch/drone_spawn_list/: single_agent.txt
startup/: .gitignore  .tmuxinator.yml  mrs_example_setup.sh  session.yml  single_agent_real_session.yml  single_agent_setup.sh  single_agent_sim_session.yml  start_single_agent_real.sh  start_single_agent_sim.sh
worlds/: crazysim_empty_10x10.sdf  crazysim_empty_3x3.sdf  crazysim_hard_maze_10x10.sdf  crazysim_random_10x10.sdf  crazysim_simple_maze_10x10.sdf  crazysim_test_10x10.sdf
worlds/meshes/stl_files/: empty_10x10.stl  empty_3x3.stl  hard_maze_10x10.stl  random_10x10.stl  simple_maze_10x10.stl  test_10x10.stl
