<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboticsprojects_crazyflie</name>
  <version>0.0.0</version>
  <description>ROS2 package to simulate and deploy algorithms on Crazyflie UAVs (single and multi-agent), adapted from MRS-Crazyflies.</description>
  <maintainer email="josloprui6@alum.us.es">Robotics Projects Group 1 Team 1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
